--- a/inst/css/gt_styles_default.scss
+++ b/inst/css/gt_styles_default.scss
@@ -236,6 +236,10 @@
     border-top-width: $row_group_border_top_width;
   }
 
+  .gt_row_group_first th {
+    border-top-width: $row_group_border_top_width;
+  }
+
   .gt_summary_row {
     color: font-color($summary_row_background_color);
     background-color: $summary_row_background_color; // summary_row.background.color
