--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -1,3 +1,11 @@
+body {
+  font-family: ui-rounded, 'Hiragino Maru Gothic ProN', Quicksand, Comfortaa, Manjari, 'Arial Rounded MT', 'Arial Rounded MT Bold', Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif;
+}
+
+code {
+  font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
+}
+
 h1, .h1 {
   font-size: 3rem;
 }
@@ -55,7 +63,7 @@ img {
 }
 
 dd > p:nth-child(1) > em {
-  color: lightblue  !important;
+  color: lightblue !important;
   margin-bottom: 4px !important
 }
 
