Modify pkgdown site

--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -25,7 +25,7 @@ h4, .h4 {
 }
 
 dt {
-  color: whitesmoke;
+  color: rgb(38, 38, 38);
   text-decoration: underline;
   text-decoration-style: solid;
   text-underline-offset: 4px;
@@ -42,30 +42,30 @@ img {
 }
 
 .roles {
-    color: rgb(164, 255, 164) !important;
+    color: rgb(3, 153, 3) !important;
 }
 
 .me-auto {
-    color: yellow !important;
+    color: blue !important;
     animation: color-change 5s infinite !important;
 }
 
 @keyframes color-change {
-  0% { color: yellow; }
-  50% { color: aqua; }
-  100% { color: yellow; }
+  0% { color: #9370DB; }
+  50% { color: #00BFFF; }
+  100% { color: #9370DB; }
 }
 
 .active .nav-link {
-  color: white !important;
+  color: #F85714 !important;
 }
 
 .text-muted {
-  color: rgb(32, 166, 182) !important
+  color: rgb(0, 141, 158) !important
 }
 
 dd > p:nth-child(1) > em {
-  color: lightblue !important;
+  color: #4169E1 !important;
   margin-bottom: 4px !important
 }
 
