implementation of additional support for column groups in interactive tables #1618

--- a/inst/css/gt_styles_default.scss
+++ b/inst/css/gt_styles_default.scss
@@ -435,4 +435,9 @@
     display: inline-flex !important;
     margin-bottom: 0.75em !important;
   }
+
+  div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+    height: 0px !important;
+  }
+
 }
